fix: make truncate navbar title on Safari properly

--- a/packages/core/styles/components/navbar.pcss
+++ b/packages/core/styles/components/navbar.pcss
@@ -68,7 +68,6 @@ html[data-theme='dark'],
     color: var(--ifm-navbar-link-color);
     display: flex;
     font-weight: bold;
-    height: 2rem;
     margin-right: 1rem;
     min-width: 0;
 
@@ -95,8 +94,13 @@ html[data-theme='dark'],
   }
 
   &__logo {
-    height: 100%;
+    flex: 0 0 auto;
+    height: 2rem;
     margin-right: 0.5rem;
+    
+    img {
+      height: 100%;
+    }
   }
 
   &__items {
